overscroll fix on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @import url("vendor/normalize.css");
 @import url("./animations.css");
 
+body {
+    overscroll-behavior: contain;
+}
+
 .page {
     min-width: 100vw;
     min-height: 100vh;
